--- a/content/post/2016-11-28-etf-notes.org
+++ b/content/post/2016-11-28-etf-notes.org
@@ -8,8 +8,25 @@
 	
 **** 预估现金为负时，篮子清单市值偏多（高于 ETF 市值），在做赎回时会先从资金账户中先扣除这部分钱
 
-{{{more}}}
+		 {{{more}}}
+* 净值计算
+	净值计算时都是考虑抢单模式，所以使用的都是对手价, 申赎净值会大于赎回净值
+** 现金部分
+	 现金部分主要包括了预估现金以及必须现金替代部分
+** 赎回净值
++ 赎回净值 ＝ (现金部分 + SUM(买一价*成份股数)) / 最小申购单位
++ 含成本净值 ＝ 赎回净值 * (1 -赎回费率)
+** 申赎净值
++ 申购净值 ＝ (现金部分 + SUM(卖一价*成份股数)) / 最小申购单位
++ 含成本净值 ＝ 申赎净值 * (1 + 赎回费率)
 * 4A1B
 ** A1:期货与现货的价差
 ** A2:A2 交易，也就是市场中很多人称为α套利的交易产品
-** A3:ETF
+** A3:折溢价套利，ETF 价格与净值之间的价差
+1. 申购 = (ETF 买 1 价 － ETF 申购净值) * 数量
+2. 赎回 = (ETF 赎回净值 - ETF 卖 1 价) * 数量
+* 现金差额偏差的影响因素
+1. ETF 股票池未补券齐，也就是相当于做空，行情上涨时，清单体现的虚高，现金差额偏差为负，反之正好相反
+2. 非停牌必须股票，行情上涨时
+3. 科创版打新，由于清单中末体现这部分价值，当实际中，行情上涨时，所有清单的价值偏小，现金差额偏差为正
+4. 调仓
